src/perl6_curl.h

int perl6_curlinfo_rtsp_client_cseq ();
int perl6_curlinfo_rtsp_server_cseq ();
int perl6_curlinfo_rtsp_cseq_recv ();
int perl6_curlinfo_primary_port ();
int perl6_curlinfo_local_ip ();
int perl6_curlinfo_local_port ();
int perl6_curlinfo_lastone ();