lib/WWW/Curl/Symbols.pm6

sub CURLINFO_RTSP_CLIENT_CSEQ is export { perl6_curlinfo_rtsp_client_cseq }
sub perl6_curlinfo_rtsp_server_cseq returns int is native('libperl6_curl') { * }
sub CURLINFO_RTSP_SERVER_CSEQ is export { perl6_curlinfo_rtsp_server_cseq }
sub perl6_curlinfo_rtsp_cseq_recv returns int is native('libperl6_curl') { * }
sub CURLINFO_RTSP_CSEQ_RECV is export { perl6_curlinfo_rtsp_cseq_recv }
sub perl6_curlinfo_primary_port returns int is native('libperl6_curl') { * }
sub CURLINFO_PRIMARY_PORT is export { perl6_curlinfo_primary_port }
sub perl6_curlinfo_local_ip returns int is native('libperl6_curl') { * }
sub CURLINFO_LOCAL_IP is export { perl6_curlinfo_local_ip }
sub perl6_curlinfo_local_port returns int is native('libperl6_curl') { * }
sub CURLINFO_LOCAL_PORT is export { perl6_curlinfo_local_port }
sub perl6_curlinfo_lastone returns int is native('libperl6_curl') { * }
sub CURLINFO_LASTONE is export { perl6_curlinfo_lastone }
